[project]
name = "langgraph-v1"
authors = [
    { name = "Haseom Shin", email = "haseom.shinhs@i-esg.io" }
]
version = "0.1.0"
description = "LangGraph V1 Tutorial"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.12",
    "langfuse>=3.8.1",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.1.0",
    "notebook>=7.4.7",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
